<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@drawable/noche_museos" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">


                <ImageView
                    android:id="@+id/iv_militar"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tanque" />

                <Button
                    android:id="@+id/boton_militar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:backgroundTint="#ffffff"
                    android:text="@string/boton_museos_militares"
                    android:textAlignment="center"
                    android:textColor="#0000ff"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">


                <ImageView
                    android:id="@+id/iv_arte"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pintura"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"/>

                <Button
                    android:id="@+id/boton_arte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:backgroundTint="#ffffff"
                    android:text="@string/boton_museos_arte"
                    android:textAlignment="center"
                    android:textColor="#0000ff"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">


                <ImageView
                    android:id="@+id/iv_tecno"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:scaleType="fitCenter"
                    android:src="@drawable/electronica"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"/>

                <Button
                    android:id="@+id/boton_tecnologia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:backgroundTint="#ffffff"
                    android:text="@string/boton_museos_tecnologia"
                    android:textAlignment="center"
                    android:textColor="#0000ff"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">


                <ImageView
                    android:id="@+id/iv_lugares"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:scaleType="fitCenter"
                    android:src="@drawable/edificio"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"/>

                <Button
                    android:id="@+id/boton_lugares"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:backgroundTint="#ffffff"
                    android:text="@string/boton_lugares_historicos"
                    android:textAlignment="center"
                    android:textColor="#0000ff"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">


                <ImageView
                    android:id="@+id/iv_otros"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:scaleType="fitCenter"
                    android:src="@drawable/mapa"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"/>

                <Button
                    android:id="@+id/boton_interes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:backgroundTint="#ffffff"
                    android:text="@string/boton_lugares_interes"
                    android:textAlignment="center"
                    android:textColor="#0000ff"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">


                <ImageView
                    android:id="@+id/iv_acerca"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:scaleType="fitCenter"
                    android:src="@drawable/interfaz"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"/>

                <Button
                    android:id="@+id/boton_acerca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="6"
                    android:backgroundTint="#ffffff"
                    android:text="@string/boton_acerca_de"
                    android:textAlignment="center"
                    android:textColor="#0000ff"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>